Use Android-compatible source reading in grammar sentinel